--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,10 @@
     transition: background .2s, box-shadow .2s;
     text-decoration: underline;
 
+    &:disabled {
+        cursor: default;
+    }
+
     &:hover {
         background: #2D8BE2;
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.16);
@@ -153,11 +157,35 @@
     display: inline-block;
     text-align: center;
 
+    &:disabled {
+        cursor: default;
+    }
+
     &_white {
         color: #1c6fbc;
         background: #fff;
         border: 1px solid #E9EFF5;
         box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.04);
+    }
+
+    &_green {
+        background: #14A84F;
+    }
+}
+
+.delete-btn {
+    &:before {
+        content: '';
+        @include bg-icon('../images/icons/basket.svg', 13px, 16px);
+        display: inline-block;
+    }
+}
+
+.reload-btn {
+    &:before {
+        content: '';
+        @include bg-icon('../images/icons/repeat.svg', 13px, 12px);
+        display: inline-block;
     }
 }
 
@@ -3235,12 +3263,9 @@
     }
 
     &__toggle {
-        border: none;
-        padding: 0;
-        background: transparent;
         margin-left: 16px;
         margin-right: 18px;
-        cursor: pointer;
+        filter: grayscale(0.9) opacity(0.75);
     }
 
     &__logo {
@@ -3791,6 +3816,10 @@
 
     &_check {
         background-image: linear-gradient(180deg, #4396D2 0%, #1E6CB4 100%);
+    }
+
+    &_verify {
+        background: linear-gradient(180deg, #F5C038 0%, #E7B229 100%);
     }
 }
 
@@ -4820,6 +4849,10 @@
     &__doc-item {
         margin-top: 30px;
     }
+
+    &__agreement {
+        margin-top: 36px;
+    }
 }
 
 .request-menu {
@@ -4931,16 +4964,6 @@
         flex: 1 1 50%;
     }
 
-    &__elem {
-        padding: 16px;
-        font-size: 13px;
-        border: 1px solid #E9EFF5;
-        border-radius: 4px;
-        font-weight: 500;
-        color: #1C6FBC;
-        text-decoration: underline;
-    }
-
     &__btn {
         width: 100%;
         box-shadow: none;
@@ -4948,6 +4971,223 @@
         font-size: 13px;
         line-height: 1.4;
     }
+
+    &__file {
+        margin: 16px 0;
+        width: 510px;
+        max-width: 100%;
+    }
+
+    &__links {
+        margin-bottom: 36px;
+        padding: 8px 16px 12px 16px;
+        background: #FAFBFC;
+        border: 1px solid #E9EFF5;
+        border-radius: 8px;
+        width: 510px;
+        max-width: 100%;
+    }
+
+    &__links-link {
+        font-size: 13px;
+        color: #4D5A65;
+    }
+
+    &__links-title {
+        margin-bottom: 5px;
+        font-size: 13px;
+        color: #868F98;
+    }
+
+    &__checkbox {
+        margin-bottom: 20px;
+    }
+}
+
+.file {
+    &__input {
+        display: none;
+    }
+
+    &__text {
+        margin-bottom: 12px;
+        font-size: 14px;
+        color: #000000;
+    }
+
+    &__btn {
+        padding: 8px;
+        border-radius: 8px;
+        background: #E9EFF5;
+        display: inline-block;
+        cursor: pointer;
+        transition: background .3s;
+        width: 100%;
+
+        &_highlight {
+            background: #d8e0e9;
+        }
+    }
+
+    &__btn-text {
+        padding: 20px 19px;
+        border: 1px dashed #112E49;
+        border-radius: 4px;
+        font-size: 14px;
+        line-height: 1.4;
+        color: #4D5A65;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: underline;
+        text-align: center;
+
+        &:before {
+            content: '';
+            @include bg-icon('../images/icons/file-download.svg', 19px, 16px);
+            display: inline-block;
+            margin-right: 16px;
+            flex: 0 0 auto;
+        }
+    }
+
+    &__progress {
+        height: 10px;
+        width: 100%;
+        display: none;
+        margin-top: 4px;
+        background: #DDDBDB;
+
+        .progress-bar {
+            background: #50E243;
+            border-radius: 10px;
+            height: 100%;
+            transition: width 1s ease;
+        }
+    }
+
+    &__progress-num {
+        display: none;
+        color: #4A4C54;
+        font-size: 11px;
+        line-height: 1.2;
+    }
+
+    &__result {
+        display: none;
+        flex-wrap: wrap;
+    }
+
+    &__result-icon-box {
+        margin-top: 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__result-type {
+        @include bg-icon('../images/icons/file.svg', 31px, 36px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-size: 11px;
+        font-weight: 700;
+        cursor: default;
+    }
+
+    &__result-inf {
+        margin-left: 12px;
+        flex: 1 1 auto;
+    }
+
+    &__result-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__result-header-btns {
+        display: flex;
+    }
+
+    &__result-header-btn {
+        &:not(:last-child) {
+            margin-right: 17px;
+        }
+    }
+
+    &__result-name {
+        color: #4A4C54;
+        font-size: 11px;
+        font-weight: 600;
+        margin-bottom: 8px;
+        text-decoration: underline;
+    }
+
+    &__status {
+        margin-top: 8px;
+        font-size: 12px;
+        border-radius: 8px;
+        font-weight: 500;
+        padding: 3px 8px 4px;
+    }
+
+    &__error-text {
+        font-size: 13px;
+        color: $color-error;
+        text-align: right;
+        margin-top: 12px;
+        line-height: 1.4;
+    }
+
+    &_loaded,
+    &_loading {
+        .file__btn {
+            display: none;
+        }
+
+        .file__result {
+            display: flex;
+            padding: 16px 0;
+        }
+    }
+
+    &_loading {
+        .file__progress,
+        .file__progress-num {
+            display: block;
+        }
+
+        .file__status,
+        .file__result-header-btns {
+            display: none;
+        }
+    }
+}
+
+.agreement {
+    padding: 16px 24px;
+
+    &__btn {
+        width: 100%;
+        margin: 16px 0;
+        display: block;
+    }
+
+    &__elem {
+        margin: 16px 0;
+    }
+}
+
+.agreement-elem {
+    padding: 16px;
+    font-size: 13px;
+    border: 1px solid #E9EFF5;
+    border-radius: 4px;
+    font-weight: 500;
+    color: #1C6FBC;
+    text-decoration: underline;
 }
 
 @import 'media';
