--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -980,6 +980,18 @@
             }
         }
     }
+
+    .contract-form {
+        &__submit {
+            position: fixed;
+            z-index: 2;
+            bottom: 16px;
+            left: 50%;
+            transform: translateX(-50%);
+            margin-left: 0;
+            width: calc(100% - 30px);
+        }
+    }
 }
 
 @media screen and (max-width: 767px) {
