--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3819,6 +3819,7 @@
     padding: 4px 8px 5px;
     line-height: 1.4;
     background-image: linear-gradient(180deg, #B6B6B6 0%, #8B8B8B 100%);
+    white-space: nowrap;
 
     &_success {
         background-image: linear-gradient(180deg, #43D26B 0%, #1EB463 100%);
@@ -4837,6 +4838,7 @@
     &__header {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     &__status {
@@ -4884,6 +4886,10 @@
 
     &__agreement {
         margin-top: 36px;
+    }
+
+    &__contract-form {
+        margin-top: 27px;
     }
 }
 
@@ -5216,6 +5222,7 @@
 .agreement-elem {
     padding: 16px;
     font-size: 13px;
+    line-height: 1.2;
     border: 1px solid #E9EFF5;
     border-radius: 4px;
     font-weight: 500;
@@ -5352,6 +5359,42 @@
         width: 100%;
         margin-top: 24px;
     }
+}
+
+.contract-form {
+    &__title {
+        margin-bottom: 36px;
+    }
+
+    &__agreement {
+        margin-top: 16px;
+    }
+
+    &__footer {
+        padding-top: 16px;
+        margin-top: 16px;
+        border-top: 1px solid #E9EFF5;
+    }
+
+    &__submit {
+        width: 100%;
+    }
+
+    &__error-text {
+        display: none;
+        margin-top: 16px;
+    }
+
+    &_error {
+        .contract-form__error-text {
+            display: block;
+        }
+    }
+}
+
+.error-text {
+    color: $color-error;
+    line-height: 1.2;
 }
 
 @import 'media';
