--- a/src/scss/libs.scss
+++ b/src/scss/libs.scss
@@ -1,4 +1,5 @@
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/swiper/swiper-bundle.css';
 @import '../../node_modules/js-datepicker/dist/datepicker.min.css';
+@import '../../node_modules/quill/dist/quill.snow.css';
 @import './custom-bootstrap.scss';
