--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,6 +1,11 @@
 $color-primary:     #3197F5;
 $color-secondary:   #112E49;
+$color-medium:      #4D5A65;
+$color-low:         #868F98;
+$color-hint:        #BAC0C6;
 
-$color-error:      #E44F4F;
+$border-white:      #E9EFF5;
+
+$color-error:       #E44F4F;
 $color-success:     #38C470;
 $color-warning:     #E1AB1F;
