--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -70,6 +70,23 @@
             top: -40px;
         }
     }
+
+    .invest-sidebar {
+        &__list {
+            display: block;
+        }
+
+        &__item {
+            display: flex;
+            justify-content: space-between;
+
+            &:not(:last-child) {
+                margin-right: 0;
+                padding-right: 0;
+                border: none;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 1280px) {
@@ -339,6 +356,24 @@
         &__sidebar {
             margin-top: 22px;
         }
+    }
+
+    .application {
+        &__logo {
+            right: 15px;
+        }
+
+        &__aside {
+            margin-top: 0;
+        }
+    }
+
+    .invest-sidebar {
+        display: none;
+    }
+
+    .discuss-sidebar {
+        box-shadow: none;
     }
 }
 
@@ -1054,6 +1089,88 @@
             display: flex;
         }
     }
+
+    .application {
+        padding-bottom: 60px;
+
+        &__banner-content {
+            min-height: 260px;
+            margin-top: -24px;
+        }
+
+        &__banner-main {
+            margin-top: 30px;
+            width: 100%;
+            max-width: 100%;
+        }
+
+        &__banner-title {
+            font-size: 56px;
+        }
+
+        &__text {
+            color: #868F98;
+            font-size: 18px;
+        }
+
+        &__progress {
+            background: rgba(0, 0, 0, 0.12);
+
+            .progress__num {
+                color: $color-medium;
+            }
+        }
+
+        &__banner-discuss {
+            display: flex;
+        }
+
+        &__groups {
+            margin-top: 0;
+        }
+
+        &__discuss {
+            margin-top: 0;
+        }
+    }
+
+    .add-menu {
+        position: fixed;
+        left: 0;
+        top: 0;
+        background: #fff;
+        display: block;
+        z-index: 2;
+        box-shadow: 0px 6px 32px rgba(0, 0, 0, 0.08);
+        height: 100%;
+        width: 100%;
+        overflow-y: auto;
+        padding: 50px 15px 110px;
+        transform: translateX(-100%);
+        transition: transform .45s;
+
+        &__close {
+            position: absolute;
+            left: 15px;
+            top: 15px;
+        }
+
+        &_active {
+            transform: translateX(0);
+        }
+    }
+
+    .discuss-sidebar {
+        border: none;
+
+        &__header {
+            box-shadow: none;
+        }
+
+        &__title {
+            padding: 0 12px 10px;
+        }
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -1729,6 +1846,111 @@
             &_desktop {
                 display: none;
             }
+        }
+    }
+
+    .application {
+        &__banner-content {
+            min-height: 160px;
+        }
+
+        &__banner-title {
+            font-size: 28px;
+        }
+
+        &__text {
+            font-size: 14px;
+        }
+
+        &__categories {
+            margin-top: 16px;
+        }
+
+        &__progress {
+            margin-top: 18px;
+        }
+
+        &__logo {
+            width: 64px;
+            height: 64px;
+        }
+    }
+
+    .calc {
+        &__main {
+            flex-direction: column;
+            margin-top: 6px;
+        }
+
+        &__inf {
+            width: 100%;
+        }
+
+        &__field {
+            width: 128px;
+        }
+
+        &__item-text {
+            font-size: 13px;
+            width: 60%;
+        }
+
+        &__value {
+            font-size: 15px;
+        }
+    }
+
+    .history {
+        &__year {
+            width: 50px;
+        }
+
+        &__text {
+            font-size: 15px;
+        }
+    }
+
+    .document {
+        &__status {
+            display: none;
+        }
+
+        &__lock {
+            margin-left: auto;
+        }
+    }
+
+    .founders-tabs {
+        &__btn-inf {
+            display: none;
+        }
+
+        &__item-position {
+            display: inline-block;
+        }
+    }
+
+    .loan-card {
+        padding: 16px 12px;
+    }
+
+    .guard-card {
+        padding: 15px;
+
+        &__text {
+            font-size: 16px;
+        }
+
+        &__subtext {
+            font-size: 12px;
+        }
+
+        &__chart {
+            display: none;
+        }
+
+        &__num {
+            margin-right: 16px;
         }
     }
 }
